--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
   <div class="card" id="card">
     <div class="confetti" id="confetti"></div>
 
-    <h1>Will you be my Valentine? 💘</h1>
-    <p>(Choose wisely 😌)</p>
+    <h1>Randi, will you be my Valentine? 💘</h1>
+    <p>(Choose wisely! 😌)</p>
 
     <div class="buttons">
       <button id="yesBtn">Yes 🥰</button>
       <button id="noBtn">No 🙃</button>
     </div>
 
-    <div class="yay" id="yay">yay 🥰</div>
+    <div class="yay" id="yay">Yay! 🥰</div>
   </div>
 
   <script>
