--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <button id="noBtn">No 🙃</button>
     </div>
 
-    <div class="yay" id="yay">Yay! 🥰</div>
+    <div class="yay" id="yay">Yay!</div>
   </div>
 
   <script>
